css/styles.css
body {
  background: linear-gradient(rgba(06, 43, 75, 0.23), rgba(169, 209, 243, 0.23));
}

.jumbotron {
  background-image: url("/C:/programming/epicodus/media-queries-and-responsive-design/week-in-review/img/Portland_Night_panorama.jpg");
  background-size: cover;
  border: 2px solid gray;
  padding: .5em;
  margin: 10em, 10em, 10em, 10em;
  /* position: relative; */
  /* max-width: 66%; */
  /* top: 0; */
  /* left: 10%; */
  z-index: 20;
  /* width: 80%; */
}

.backdrop {
  background-color: rgba(0, 0, 255, 0.5);
  color: #ffffff;
}

.background-gradient {
  background: linear-gradient(rgba(06, 43, 75, 0.5), rgba(169, 209, 243, 0.5));
}

.pic {
  min-width: 13%;
  max-width: 22%;
  /* position: absolute; */
  /* float: right; */
}

.portrait {
  min-width: 13%;
  max-width: 22%;
  /* float: right;
  top: auto;
  left: auto; */
  position: absolute;
  z-index: 25;
  /* position: absolute; */
  float: right;
  right: 130px;
  top: 4em;
  width: 120px;
  /* padding: 10px; */
  border: 5px solid gray;

}

/*.row {
  margin: 0px;
  padding: 0px;
}

.col {
  margin: 0px;
  padding: 0px;
}
.well {
  margin-top: 3px;
}

/*.panel {
  margin: 0px, 0px, 0px, 0px;
  padding: 5px;
}

.panel-text{
  color: #0f0f0f;
}
*/

.plaque {
  width: 52%;
  float: left;
  position: absolute;
  top: 88%;
  left: 25%;
  z-index: 10;
  font-weight: bolder;
  text-align: center;
  margin: auto;
  border: 5px solid #96724e;
  padding: .3em;
  background-color: rgba(165, 146, 62, .65)
}

.panel-box {
  margin-top: 0px;
  margin-bottom: 70px; <!-- was #13 -->
  margin-left: 2px;
  margin-right: 2px;
  border: 2px solid gray;
  padding: 24px;
}

.panel-body {
  margin-top: 10px;
  margin-bottom: 45px;
  margin-right: 13px;
  border: 2px solid gray;
  padding: 24px;
  background-color: rgba(133, 166, 243, 0.5);
}

.boxy {
  margin: 5, 5, 5, 5;
  border: 2px solid gray;
  padding: 14px;
  background-color: rgba(133, 166, 243, 0.5);
}

.space-left {
  position: relative;
  float: left;
  width: 88%;
}

.space-right {
  float: right;
  width: 57%
}

/*h1, h2, h3, p {
  background-color: rgba(0, 0, 255, 0.5);
  color: #ffffff;
}*/

/*body {
  background-image: url("/C:/programming/epicodus/media-queries-and-responsive-design/week-in-review/img/Made_in_Oregon_sign_in_2011_-_Portland_Oregon.JPG");
  background-size: cover;
  background-repeat: no-repeat;
  background-color: rgba(255,255,0,0.275);
}
/*
@media screen and (min-width: 768px) {
  .column {
    width: 300px;
    float: left;
    padding: 20px;
  }
}
@media screen and (max-width: 768px) and (min-width: 600px) {
  body {
    background-color: black;
    color: white;
  }
}

@media screen and (max-width: 480px) {
  body {
    background-color: teal;
  }
}

*/

